      and invite and to confirmations/approvals of address changes,
      subscriptions and invitations.

    - Decode quoted-printable and base64 encoded parts before passing to
      HTML_TO_PLAIN_TEXT_COMMAND (1367783).

    - Remove Approve: header from post - treat as Approved: (1355707).

    - Stop removing line following Approve(d): line in body of post (1318883).

    - Log post in post log with true sender, not listname-bounces (1287921).

    - Correctly initialize and remember the list's default_member_moderation
      attribute in the web list creation page (1263213).

    - Add PEP263 charset in config_list output (1343100).

    - header_filter_rules get lost if accessed directly and needed authenti-
      cation by login page (1230865).

    - Obscure email when the poster doesn't set full name in 'From:' header.

    - Take preambles and epilogues into account when calculating message sizes
      for holding purposes (Mark Sapiro).

    - Logging/Logger.py unicode transform option (1235567).

    - bin/update crashes with bogus files (949117).

    - Bugs and patches: 1212066/1301983 (Date header in create/remove notice)

2.1.6 (30-May-2005)

  Security

    - Critical security patch for path traversal vulnerability in private
      archive script  (CAN-2005-0202).

    - Added the ability for Mailman generated passwords (both member and list
      admin) to be more cryptographically secure.  See new configuration
      variables USER_FRIENDLY_PASSWORDS, MEMBER_PASSWORD_LENGTH, and
      ADMIN_PASSWORD_LENGTH.  Also added a new bin/withlist script called
      reset_pw.py which can be used to reset all member passwords.  Passwords
      generated by Mailman are now 8 characters by default for members, and 10
      characters for list administrators.

    - A potential cross-site scripting hole in the driver script has been
      closed.  Thanks to Florian Weimer for its discovery.  Also, turn
      STEALTH_MODE on by default.
